messenger/include/dna/dna_engine.h

/* ============================================================================
 * OPAQUE TYPES
 * ============================================================================ */

typedef struct dna_engine dna_engine_t;
typedef uint64_t dna_request_id_t;
/**
 * Reaction entry (one reactor applying one emoji to one target message)
 */
typedef struct {
    char reactor_fp[129];       /* Reactor fingerprint (128 hex + null) */
    char emoji[8];              /* UTF-8 emoji, max 4 bytes + null */
    uint64_t timestamp;         /* Unix timestamp when reaction was applied */
} dna_reaction_t;
/* ============================================================================
 * ASYNC CALLBACK TYPES
 * ============================================================================ */

/**
 * Generic completion callback (success/error only)
 * Error is 0 (DNA_OK) on success, negative on error
 */
typedef void (*dna_completion_cb)(
    dna_request_id_t request_id,
    int error,
    void *user_data
);
/**
 * Messages callback
 */
typedef void (*dna_messages_cb)(
    dna_request_id_t request_id,
    int error,
    dna_message_t *messages,
    int count,
    void *user_data
);
/**
 * Messages page callback (with total count for pagination)
 */
typedef void (*dna_messages_page_cb)(
    dna_request_id_t request_id,
    int error,
    dna_message_t *messages,
    int count,
    int total,
    void *user_data
);
/**
 * Reactions callback
 *
 * @param request_id Request ID
 * @param error      0 on success, error code otherwise
 * @param reactions  Array of reactions (caller must free via dna_free_reactions)
 * @param count      Number of reactions
 * @param user_data  User data
 */
typedef void (*dna_reactions_cb)(
    dna_request_id_t request_id,
    int error,
    dna_reaction_t *reactions,
    int count,
    void *user_data
);
/* ============================================================================
 * 4. MESSAGING (3 async functions)
 * ============================================================================ */

/**
 * Send message to contact
 *
 * Encrypts with Kyber1024 + AES-256-GCM, signs with Dilithium5.
 * Tries P2P delivery first, falls back to DHT offline queue.
 *
 * @param engine               Engine instance
 * @param recipient_fingerprint Recipient fingerprint
 * @param message              Message text
 * @param callback             Called on completion
 * @param user_data            User data for callback
 * @return                     Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_send_message(
    dna_engine_t *engine,
    const char *recipient_fingerprint,
    const char *message,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Send a reaction to a message (async)
 *
 * @param engine                Engine instance
 * @param recipient_fingerprint Target recipient fingerprint (128 hex + null)
 * @param target_content_hash   content_hash of the message being reacted to (64 hex chars)
 * @param emoji                 UTF-8 emoji (must be one of the allowed 8)
 * @param op                    "add" or "remove"
 * @param callback              Called on completion
 * @param user_data             User data for callback
 * @return                      Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_send_reaction(
    dna_engine_t *engine,
    const char *recipient_fingerprint,
    const char *target_content_hash,
    const char *emoji,
    const char *op,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Get the live reaction list for a target message (async, DB-only)
 *
 * Scans local message backup for message_type=3 rows matching
 * target_content_hash and replays add/remove ops in timestamp order.
 *
 * @param engine               Engine instance
 * @param target_content_hash  64-hex hash of the target message
 * @param callback             Called with the reactions array (owned by caller)
 * @param user_data            User data for callback
 * @return                     Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_reactions(
    dna_engine_t *engine,
    const char *target_content_hash,
    dna_reactions_cb callback,
    void *user_data
);
/**
 * Queue message for async sending (returns immediately)
 *
 * Adds message to internal send queue for background delivery.
 * Messages are sent in order via worker threads. Use this for
 * fire-and-forget messaging with optimistic UI.
 *
 * @param engine               Engine instance
 * @param recipient_fingerprint Recipient fingerprint
 * @param message              Message text
 * @return                     >= 0: queue slot ID (success)
 *                             -1: queue full
 *                             -2: invalid args (DNA_ENGINE_ERROR_NOT_INITIALIZED)
 */
DNA_API int dna_engine_queue_message(
    dna_engine_t *engine,
    const char *recipient_fingerprint,
    const char *message
);
/**
 * Get message queue capacity
 *
 * @param engine Engine instance
 * @return       Maximum number of messages that can be queued
 */
DNA_API int dna_engine_get_message_queue_capacity(dna_engine_t *engine);
/**
 * Get current message queue size
 *
 * @param engine Engine instance
 * @return       Number of messages currently in queue
 */
DNA_API int dna_engine_get_message_queue_size(dna_engine_t *engine);
/**
 * Set message queue capacity (default: 20)
 *
 * @param engine   Engine instance
 * @param capacity New capacity (1-100)
 * @return         0 on success, -1 on invalid capacity
 */
DNA_API int dna_engine_set_message_queue_capacity(dna_engine_t *engine, int capacity);
/**
 * Get conversation with contact
 *
 * Returns all messages exchanged with contact.
 *
 * @param engine              Engine instance
 * @param contact_fingerprint Contact fingerprint
 * @param callback            Called with messages array
 * @param user_data           User data for callback
 * @return                    Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_conversation(
    dna_engine_t *engine,
    const char *contact_fingerprint,
    dna_messages_cb callback,
    void *user_data
);
/**
 * Get conversation page with contact (paginated)
 *
 * Returns a page of messages for efficient chat loading.
 * Messages ordered by timestamp DESC (newest first).
 *
 * @param engine              Engine instance
 * @param contact_fingerprint Contact fingerprint
 * @param limit               Max messages to return (page size)
 * @param offset              Messages to skip (for pagination)
 * @param callback            Called with messages array and total count
 * @param user_data           User data for callback
 * @return                    Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_conversation_page(
    dna_engine_t *engine,
    const char *contact_fingerprint,
    int limit,
    int offset,
    dna_messages_page_cb callback,
    void *user_data
);
/**
 * Force check for offline messages
 *
 * Normally automatic - only needed if you want immediate check.
 *
 * @param engine    Engine instance
 * @param callback  Called on completion
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_check_offline_messages(
    dna_engine_t *engine,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Force check for offline messages from a specific contact
 *
 * Queries only the specified contact's outbox instead of all contacts.
 * Use this when entering a chat to get immediate updates from that contact.
 *
 * @param engine              Engine instance
 * @param contact_fingerprint Contact fingerprint to check
 * @param callback            Called on completion
 * @param user_data           User data for callback
 * @return                    Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_check_offline_messages_from(
    dna_engine_t *engine,
    const char *contact_fingerprint,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Delete a message from local database
 *
 * Deletes a message by ID from the local message backup database.
 * This is a local-only operation - does not affect the recipient's copy.
 *
 * @param engine     Engine instance
 * @param message_id Message ID to delete
 * @return           0 on success, -1 on error
 */
DNA_API int dna_engine_delete_message_sync(
    dna_engine_t *engine,
    int message_id
);
/**
 * Delete a message with full pipeline (local + DHT + notices)
 */
DNA_API dna_request_id_t dna_engine_delete_message(
    dna_engine_t *engine, int message_id, bool send_notices,
    dna_completion_cb callback, void *user_data);
/**
 * Delete all messages with a contact (purge conversation)
 */
DNA_API dna_request_id_t dna_engine_delete_conversation(
    dna_engine_t *engine, const char *contact_fingerprint, bool send_notices,
    dna_completion_cb callback, void *user_data);
/**
 * Delete all messages (purge everything)
 */
DNA_API dna_request_id_t dna_engine_delete_all_messages(
    dna_engine_t *engine, bool send_notices,
    dna_completion_cb callback, void *user_data);
/**
 * Retry all pending/failed messages
 *
 * Queries local database for messages with status PENDING(0) or FAILED(3)
 * and attempts to re-queue them to DHT. Called automatically on:
 * - Identity load (app startup)
 * - DHT reconnect (network change)
 *
 * Messages that exceed max_retries (10) are skipped and remain as FAILED.
 *
 * @param engine     Engine instance
 * @return           Number of messages successfully retried, or -1 on error
 */
DNA_API int dna_engine_retry_pending_messages(dna_engine_t *engine);
/**
 * Queue group message for async sending (fire-and-forget)
 *
 * Same as dna_engine_send_group_message but returns immediately.
 * Message is queued and sent in background. Use for optimistic UI.
 *
 * @param engine     Engine instance
 * @param group_uuid Group UUID
 * @param message    Message text
 * @return           >= 0: queue slot ID (success)
 *                   -1: queue full
 *                   -2: invalid args or not initialized
 */
DNA_API int dna_engine_queue_group_message(
    dna_engine_t *engine,
    const char *group_uuid,
    const char *message
);
/**
 * Free reactions array returned by callbacks
 */
DNA_API void dna_free_reactions(dna_reaction_t *reactions, int count);
/**
 * Unfollow a user
 *
 * @param engine     Engine instance
 * @param fingerprint 128-char hex fingerprint of user to unfollow
 * @param callback   Completion callback
 * @param user_data  User data for callback
 */
DNA_API dna_request_id_t dna_engine_unfollow(
    dna_engine_t *engine,
    const char *fingerprint,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Check if following a user (synchronous, local DB check)
 *
 * @param engine      Engine instance
 * @param fingerprint 128-char hex fingerprint to check
 * @return            true if following, false otherwise
 */
DNA_API bool dna_engine_is_following(dna_engine_t *engine, const char *fingerprint);
/* ============================================================================
 * DEBUG LOG INBOX (v0.9.164+)
 * ============================================================================ */

/**
 * Send an encrypted debug log blob to a receiver's DHT inbox.
 *
 * The log body is encrypted with Kyber1024 + AES-256-GCM using the receiver's
 * Kyber public key (fetched from DHT/profile cache), then PUT to the receiver's
 * debug inbox DHT key (SHA3-512("dna-debug-inbox" || receiver_fp_raw_64)).
 *
 * Max log size: 3 MB. Hint is an optional short user-visible label (max 128 B).
 *
 * @param engine            Engine instance (must have identity loaded)
 * @param receiver_fp_hex   128-char hex Dilithium5 fingerprint of the receiver
 * @param log_body          Raw log bytes (plaintext)
 * @param log_len           Length of log body (1 .. DNA_DEBUG_LOG_MAX_BODY_LEN)
 * @param hint              Optional short label (NUL-terminated, may be NULL)
 * @param callback          Completion callback (error == 0 on success)
 * @param user_data         User data for callback
 * @return                  Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_debug_log_send(
    dna_engine_t *engine,
    const char *receiver_fp_hex,
    const uint8_t *log_body,
    size_t log_len,
    const char *hint,
    dna_completion_cb callback,
    void *user_data
);