messenger/dna_messenger_flutter/lib/ffi/dna_bindings.dart


  int dna_engine_unfollow(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_unfollow(engine, fingerprint, callback, user_data);
  }

  late final _dna_engine_is_following = _lib.lookupFunction<
      Bool Function(Pointer<dna_engine_t>, Pointer<Utf8>),
      bool Function(Pointer<dna_engine_t>, Pointer<Utf8>)>('dna_engine_is_following');

  bool dna_engine_is_following(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> fingerprint,
  ) {
    return _dna_engine_is_following(engine, fingerprint);
  }

  // ---------------------------------------------------------------------------
  // MESSAGING
  // ---------------------------------------------------------------------------

  late final _dna_engine_send_message = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_send_message');

  int dna_engine_send_message(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> recipient_fingerprint,
    Pointer<Utf8> message,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_send_message(
        engine, recipient_fingerprint, message, callback, user_data);
  }

  late final _dna_engine_send_reaction = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<Utf8>, Pointer<Utf8>, Pointer<DnaCompletionCb>,
          Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<Utf8>, Pointer<Utf8>, Pointer<DnaCompletionCb>,
          Pointer<Void>)>('dna_engine_send_reaction');

  int dna_engine_send_reaction(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> recipient_fingerprint,
    Pointer<Utf8> target_content_hash,
    Pointer<Utf8> emoji,
    Pointer<Utf8> op,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_send_reaction(engine, recipient_fingerprint,
        target_content_hash, emoji, op, callback, user_data);
  }

  late final _dna_engine_get_reactions = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaReactionsCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaReactionsCb>, Pointer<Void>)>('dna_engine_get_reactions');

  int dna_engine_get_reactions(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> target_content_hash,
    Pointer<DnaReactionsCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_reactions(
        engine, target_content_hash, callback, user_data);
  }

  late final _dna_free_reactions = _lib.lookupFunction<
      Void Function(Pointer<dna_reaction_t>, Int32),
      void Function(Pointer<dna_reaction_t>, int)>('dna_free_reactions');

  void dna_free_reactions(Pointer<dna_reaction_t> reactions, int count) {
    _dna_free_reactions(reactions, count);
  }

  // Send debug log to a receiver's debug inbox
  late final _dna_engine_debug_log_send = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Uint8>,
          Size, Pointer<Utf8>, Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Uint8>, int,
          Pointer<Utf8>, Pointer<DnaCompletionCb>,
          Pointer<Void>)>('dna_engine_debug_log_send');

  int dna_engine_debug_log_send(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> receiver_fp_hex,
    Pointer<Uint8> log_body,
    int log_len,
    Pointer<Utf8> hint,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_debug_log_send(
        engine, receiver_fp_hex, log_body, log_len, hint, callback, user_data);
  }

  // Queue message for async sending (returns immediately)
  late final _dna_engine_queue_message = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<Utf8>)>('dna_engine_queue_message');

  int dna_engine_queue_message(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> recipient_fingerprint,
    Pointer<Utf8> message,
  ) {
    return _dna_engine_queue_message(engine, recipient_fingerprint, message);
  }

  // Queue group message for async sending (returns immediately)
  late final _dna_engine_queue_group_message = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<Utf8>)>('dna_engine_queue_group_message');

  int dna_engine_queue_group_message(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> group_uuid,
    Pointer<Utf8> message,
  ) {
    return _dna_engine_queue_group_message(engine, group_uuid, message);
  }

  // Get message queue capacity
  late final _dna_engine_get_message_queue_capacity = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>),
      int Function(Pointer<dna_engine_t>)>('dna_engine_get_message_queue_capacity');

  int dna_engine_get_message_queue_capacity(Pointer<dna_engine_t> engine) {
    return _dna_engine_get_message_queue_capacity(engine);
  }

  // Get current message queue size
  late final _dna_engine_get_message_queue_size = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>),
      int Function(Pointer<dna_engine_t>)>('dna_engine_get_message_queue_size');

  int dna_engine_get_message_queue_size(Pointer<dna_engine_t> engine) {
    return _dna_engine_get_message_queue_size(engine);
  }

  // Set message queue capacity
  late final _dna_engine_set_message_queue_capacity = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Int32),
      int Function(Pointer<dna_engine_t>, int)>('dna_engine_set_message_queue_capacity');

  int dna_engine_set_message_queue_capacity(Pointer<dna_engine_t> engine, int capacity) {
    return _dna_engine_set_message_queue_capacity(engine, capacity);
  }

  late final _dna_engine_get_conversation = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaMessagesCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaMessagesCb>, Pointer<Void>)>('dna_engine_get_conversation');

  int dna_engine_get_conversation(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> contact_fingerprint,
    Pointer<DnaMessagesCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_conversation(
        engine, contact_fingerprint, callback, user_data);
  }

  late final _dna_engine_get_conversation_page = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Int32, Int32,
          Pointer<DnaMessagesPageCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, int, int,
          Pointer<DnaMessagesPageCb>, Pointer<Void>)>('dna_engine_get_conversation_page');

  int dna_engine_get_conversation_page(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> contact_fingerprint,
    int limit,
    int offset,
    Pointer<DnaMessagesPageCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_conversation_page(
        engine, contact_fingerprint, limit, offset, callback, user_data);
  }

  late final _dna_engine_check_offline_messages = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaCompletionCb>,
          Pointer<Void>)>('dna_engine_check_offline_messages');

  int dna_engine_check_offline_messages(
    Pointer<dna_engine_t> engine,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_check_offline_messages(engine, callback, user_data);
  }

  // Check offline messages from a specific contact
  late final _dna_engine_check_offline_messages_from = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>(
      'dna_engine_check_offline_messages_from');

  int dna_engine_check_offline_messages_from(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> contactFingerprint,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_check_offline_messages_from(
        engine, contactFingerprint, callback, user_data);
  }

  // Delete a message from local database
  late final _dna_engine_delete_message_sync = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Int32),
      int Function(Pointer<dna_engine_t>, int)>('dna_engine_delete_message_sync');

  /// Delete a message from local database (synchronous)
  /// Returns 0 on success, -1 on error
  int dna_engine_delete_message_sync(
    Pointer<dna_engine_t> engine,
    int messageId,
  ) {
    return _dna_engine_delete_message_sync(engine, messageId);
  }

  // Delete a message with full pipeline (local + DHT + notices)
  late final _dna_engine_delete_message = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Int32, Bool,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, int, bool,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_delete_message');

  /// Delete a message with full pipeline (local + DHT + notices, async)
  int dna_engine_delete_message(
    Pointer<dna_engine_t> engine,
    int messageId,
    bool sendNotices,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_delete_message(engine, messageId, sendNotices, callback, user_data);
  }

  // Delete all messages with a contact (purge conversation)
  late final _dna_engine_delete_conversation = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Bool,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, bool,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_delete_conversation');

  /// Delete all messages with a contact (async)
  int dna_engine_delete_conversation(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> contactFingerprint,
    bool sendNotices,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_delete_conversation(engine, contactFingerprint, sendNotices, callback, user_data);
  }

  // Delete all messages (purge everything)
  late final _dna_engine_delete_all_messages = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Bool,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, bool,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_delete_all_messages');

  /// Delete all messages (async)
  int dna_engine_delete_all_messages(
    Pointer<dna_engine_t> engine,
    bool sendNotices,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_delete_all_messages(engine, sendNotices, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // MESSAGE RETRY
  // ---------------------------------------------------------------------------

  late final _dna_engine_retry_pending_messages = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>),
      int Function(Pointer<dna_engine_t>)>('dna_engine_retry_pending_messages');
